# youtube-video-summarization

./: .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
